--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aditya",
-  "homepage": "http://icancodebeauty.github.io/aditya",
+  "homepage": "http://aditya.is-a.dev",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
