--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "daisyui": "^2.13.3",
     "next": "12.1.1",
     "react": "17.0.2",
