--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "icancodebeauty.github.io",
+  "homepage": "https://icancodebeauty.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,8 +8,10 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.13.3",
+    "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
